source/styles.scss
// Import fontawesome
@import "../node_modules/@fortawesome/fontawesome-free/scss/fontawesome";
@import "../node_modules/@fortawesome/fontawesome-free/scss/solid";
@import "../node_modules/@fortawesome/fontawesome-free/scss/regular";
@import "../node_modules/@fortawesome/fontawesome-free/scss/brands";

// set glbal
html,
body {
  margin: 0;
  padding: 0;
  min-height: 100vh;
  min-width: 100vw;
  background-image: linear-gradient(to top, #f236fd, #41d1e1);
  background-size: cover;
  background-repeat: no-repeat;
}

a {
  text-decoration: none;
}

$myfont: "salsa", cursive;
$myShadow: 0px 7px 67px 0px rgba(0, 0, 0, 0.75);

.show {
  display: block;
}

.hidden {
  display: none;
}

// reuseable background
.my-gradient {
  min-height: 100vh;
  min-width: 100vw;
  background-image: linear-gradient(to top, #f236fd, #41d1e1);
  background-size: cover;
  background-repeat: no-repeat;
}

// splash page
.waffle {
  display: flex;
  justify-content: center;
  align-items: center;
  font-family: $myfont;
  position: relative;
  margin-top: 100px;
  .pic {
    position: relative;
    display: flex;
    align-items: center;

    .left-image,
    .right-image {
      max-width: 500px;
      max-height: 500px;
      position: absolute;
      z-index: 0;
      opacity: 0;
    }
    .left-image {
      animation-delay: 0.5s;
      left: -200px;
      animation: slide-in-left 1s forwards;
    }
    .right-image {
      animation-delay: 0.5s;
      right: -100px;
      bottom: -150px;
      animation: slide-in-right 1s forwards;
    }
    .punch {
      transition: color 0.7s ease, transform 0.7s ease;
      position: relative;
      z-index: 1;
      justify-content: center;
      align-items: center;
      text-align: center;
      margin: 0;
      h1 {
        font-size: 10rem;
        transform: rotate(-10deg);
        margin: 0;
        opacity: 0;
        animation: fade-in 0.5s forwards;
      }
      #tap {
        display: none;
        letter-spacing: .5em;
      }
    }
  }
}


#countdown {
  position: absolute;
  margin-top: 30%;
  left: 50%;
  transform: translateX(-60%);
  font-size: 2rem;
  color: #0e63a8;
}

.punch:hover {
  cursor: pointer;
  color: #0e63a8;
  transform: translateY(-10px);
}
.leave-left,
.leave-right {
  max-width: 500px;
  max-height: 500px;
  position: absolute;
  z-index: 0;
}

.leave-left {
  left: -200px;
  animation: fade-out-left 1s forwards;
}

.leave-right {
  right: -100px;
  bottom: -150px;
  animation: fade-out-right 1s forwards;
}

.sparkle1 {
  position: absolute;
  width: 10px;
  height: 10px;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 50%;
  animation: sparkle 5s infinite;
  z-index: 1;
}
.sparkle2 {
  position: absolute;
  width: 10px;
  height: 10px;
  background-color: rgba(255, 255, 255, 0.8);
  border-radius: 50%;
  animation: sparkle 3s infinite;
  z-index: 1;
}

// home page css
.banner {
  margin: 20px auto 0;
  max-width: 90%;
  display: flex;
  align-items: center;
  justify-content: center;
  border: black solid 2px;
  border-radius: 8px;
  box-shadow: $myShadow;
  position: relative;
  z-index: 2;
  img {
    max-width: 400px;
    max-height: 200px;
  }
}
// mobile nav hide
.mobileNav {
  position: fixed;
  align-items: center;
  justify-content: center;
  top: 0;
  right: 10px;
  z-index: 5;
  width: 40px;
  height: 40px;
  border-radius: 6px;
  background-color: #0e63a8;

  img {
    width: 30px;
    height: auto;
    display: block;
    margin: auto;
  }

  img:hover {
    cursor: pointer;
  }

  .mobileNavDropdown {
    position: absolute;
    top: 100%;
    left: -100%;
    background-color: #0e63a8;
    border: 1px solid aliceblue;
    box-shadow: $myShadow;
    z-index: 4;
    font-family: $myfont;
  }

  .mobileNavTab {
    padding: 10px;
    border-bottom: 1px solid aliceblue;

    &:last-child {
      border-bottom: none;
    }

    a {
      color: aliceblue;
      text-decoration: none;
    }

    a:active {
      color: #000000;
    }
  }

  .mobileNavTab:hover {
    background-color: #ef43f8;
  }
}

// sidenav
.nav {
  position: fixed;
  z-index: 5;
  top: 50%;
  left: 0;

  .navTab {
    background-color: #0e63a8;
    border-radius: 4px;
    margin-top: 10px;
    padding: 4px;
    width: 40px;
    max-height: 40px;
    transition: width 0.3s;

    img {
      max-width: 40px;
      max-height: 40px;
    }
    a {
      color: transparent;
      text-decoration: none;
      font-family: $myfont;
      font-size: larger;
      display: block;
      padding: 8px;
    }
  }
}

.navTab:hover {
  cursor: pointer;
  width: 100px;
  background-color: #ef43f8;
}

.navTab:hover a {
  color: aliceblue;
}

.navTab:hover img {
  display: none;
}

.banner-text {
  align-items: center;
  justify-content: center;
  text-align: center;
  font-family: $myfont;
  color: aliceblue;

  h1 {
    font-size: 4rem;
    letter-spacing: 6px;
    text-decoration: underline;
    text-align: center;
  }

  h2 {
    font-size: 2rem;
    font-style: italic;
    text-align: center;
  }
}
.info {
  display: flex;
  flex-direction: wrap;
}

.film {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  color: aliceblue;
  padding: 10px;
  font-family: $myfont;
  letter-spacing: 3px;
  z-index: 3;
  iframe {
    background-color: #0e63a8;
    color: aliceblue;
    box-shadow: $myShadow;
    z-index: 2;
    border-radius: 5px;
    transition: transform 0.4s;
  }

  iframe:hover {
    transform: scale(1.05);
  }
}
.RSVP,
.film {
  flex: 1 1 50%;
  padding: 20px;
  z-index: 2;
}

// rsvp form
#mailer {
  background-color: rgba(139, 195, 248, 0.8);
  border-radius: 8px;
  padding: 20px;
  margin: 20px auto;
  max-width: 50%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  h1 {
    color: aliceblue;
    font-family: $myfont;
  }

  a {
    color: aliceblue;
    font-family: $myfont;
    font-size: medium;
  }
}
/* ... */

